Fix overflow property for chosen popup.

--- a/style/cafevdb.css
+++ b/style/cafevdb.css
@@ -3,7 +3,7 @@
  * CAFEVDB -- Camerata Academica Freiburg e.V. DataBase.
  *
  * @author Claus-Justus Heine
- * @copyright 2011-2016, 2020 Claus-Justus Heine <himself@claus-justus-heine.de>
+ * @copyright 2011-2016, 2020, 2021 Claus-Justus Heine <himself@claus-justus-heine.de>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU GENERAL PUBLIC LICENSE
@@ -287,6 +287,7 @@ input[type=checkbox],input[type=submit],input[type=radio],input[type=button] {
 .ui-dialog.chosen-popup-dialog .ui-dialog-content {
   min-height:4.4em !important;
   padding: 0;
+  overflow: visible;
 }
 .ui-dialog.chosen-popup-dialog .ui-dialog-content .chosen-choices {
   min-height:4.4em;
